<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Potlatch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_rb_male">Male</string>
    <string name="lbl_rb_female">Female</string>
    <string name="lbl_birthday">Birthday:</string>
    <string name="server">https://192.168.1.11:8443</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="user_admin">admin</string>
    <string name="pass_admin">pass</string>

</resources>
