<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.isabel.coursera.potlatch.RegisterActivity"
    android:id="@+id/Empty"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center_horizontal">

    <ImageButton
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:id="@+id/ib_user_pic"
        android:layout_weight="0.68" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etxt_username"
        android:hint="@string/lbl_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etxt_password"
        android:hint="@string/lbl_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etxt_confirm_password"
        android:hint="@string/lbl_confirm_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etxt_email"
        android:hint="@string/lbl_email" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_rb_male"
                android:id="@+id/rb_male" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_rb_female"
                android:id="@+id/rb_female" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_birthday"
            android:id="@+id/textView"
            android:textSize="17dp"
            android:paddingStart="15dp" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:id="@+id/ib_birthdat" />
    </LinearLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_register"
        android:id="@+id/btn_registration" />

</LinearLayout>
