<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:orientation="vertical" >


        <EditText
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:hint="@string/lbl_username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_password"
            android:hint="@string/lbl_password" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_login"
            android:id="@+id/btn_login" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_register"
            android:id="@+id/btn_register" />
    </LinearLayout>
</RelativeLayout>